# posit-rs

./: Cargo.toml  README.md  build.rs  wrapper.h
SoftPosit/source/include/: softposit.h
src/: internal.rs  lib.rs  posit.rs  quire.rs
