[package]
name = "posit-rs"
version = "0.1.0"
authors = ["Pablo <pablo-escobar@riseup.net>"]
edition = "2018"
links= "softposit"
build = "build.rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.94"

[build-dependencies]
bindgen = "0.53.1"
